INT-misc-39a8.7: On standard skins removed 'jumping' of menu width while rendering

--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -1,6 +1,6 @@
 <!-- IF .menu -->
 <td id="sn_menu" valign="top">
-  <table width="100%" cellspacing="0" cellpadding="0" id="left_menu" align="left">
+  <table cellspacing="0" cellpadding="0" id="left_menu" align="left">
   <!-- BEGIN menu -->
     <tr><!-- IF menu.LEVEL == 'header' --><!-- DEFINE $TX = 'th' --><!-- ELSE --><!-- DEFINE $TX = 'td' --><!-- ENDIF -->
       <{$TX}
@@ -37,6 +37,7 @@
   <!-- END menu -->
   </table>
 </td>
+<td>&nbsp;</td>
 
 <script type="text/javascript"><!--
 sn_timers.unshift({'id': 'menu_admin_server_time', 'type': 2, 'active': true, 'start_time': {TIME_NOW}, options: 3});
