MISC-misc-39a8.21: Misc changes

--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -71,9 +71,9 @@ var que_id = '{QUE_ID}';
   <!-- DEFINE $COLSPAN = 5 -->
 <!-- ENDIF -->
 
-<table class="markup" cellspacing="0" cellpadding="0" style="background: transparent">
+<table class="markup" cellspacing="0" cellpadding="0" style="background: transparent;margin: 0 auto"  align="center">
 <tr style="background: transparent; border: none">
-  <td align="center" valign="top"  >
+  <td align="center" valign="top" width="100%">
 <table width="650px" id="unit_table">
   <!-- IF SHOW_SECTORS -->
   <tr>
