--- a/design/templates/OpenGame/planet_manage.tpl.html
+++ b/design/templates/OpenGame/planet_manage.tpl.html
@@ -126,7 +126,7 @@
 
     <tr>
       <th>{L_colony_abandon}</th>
-      <th>{L_sys_password} <input type="password" name="abandon_confirm" value=""></th>
+      <th>{L_sys_password} <input type="password" name="abandon_confirm" maxlength="32" value=""></th>
       <th><input type="submit" name="abandon" value="{L_colony_abandon}"></th>
      </tr>
   </table>
