--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -13,7 +13,7 @@
 
 <br />
 
-<table>
+<table align="center">
   <tr>
     <th valign=top class="tr">
       <!-- IF NEW_MESSAGES || NEW_LEVEL_MINER || NEW_LEVEL_RAID -->
