--- a/design/css/global.css
+++ b/design/css/global.css
@@ -1,8 +1,9 @@
 html, body
 {
-  overflow-y: none;
   height: 100%;
-/*  min-height: 100%;
+/*
+  overflow-y: none;
+  min-height: 100%;
   min-width: 100%;
   position: absolute;*/
 }
@@ -159,6 +160,8 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 
 /* Coloring Slider Range */
 .ui-slider-range { background: #f6a828; }
+
+table {margin-left: auto; margin-right: auto}
 
 .table th, .table tr, .table td
 {
