--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -11,6 +11,8 @@
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}design/css/global-ie.css" />
     <![endif]-->
+
+    <link rel="stylesheet" type="text/css" href="{D_SN_ROOT_VIRTUAL}{D_TEMPLATE_PATH}/_template.css" />
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin.css" />
     <link rel="stylesheet" type="text/css" href="{-path_prefix-}{dpath}skin_server.css" />
     <!-- IF ADV_SEO_META_KEYWORDS -->
@@ -99,5 +101,4 @@
     <!-- IF ADV_SEO_JAVASCRIPT -->
     {ADV_SEO_JAVASCRIPT}
     <!-- ENDIF -->
-    <table class="markup" width="100%">
-      <tr>
+    <table class="markup" width="100%" id="global_page_markup">
