--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -49,23 +49,33 @@
         </tr>
         <tr>
           <th>{L_lastpassword}</th>
-          <th><input name="db_password" size="20" value="" type="password"></th>
+          <th><input name="db_password" size="20" maxlength="32" value="" type="password"></th>
         </tr>
         <tr>
           <th>{L_newpassword}</th>
-          <th><input name="newpass1" size="20" maxlength="40" type="password"></th>
+          <th><input name="newpass1" size="20" maxlength="32" type="password"></th>
         </tr>
         <tr>
           <th>{L_newpasswordagain}</th>
-          <th><input name="newpass2" size="20" maxlength="40" type="password"></th>
+          <th><input name="newpass2" size="20" maxlength="32" type="password"></th>
         </tr>
         <tr title="{L_emaildir_tip}">
           <th>{L_emaildir}</th>
-          <th><input name="db_email" maxlength="100" size="20" value="{opt_mail1_data}" type="text"></th>
+          <th>
+            <input name="db_email" maxlength="64" size="20" value="{opt_mail1_data}" type="text"><br />
+            {L_opt_mail_optional_description}
+          </th>
         </tr>
         <tr>
           <th>{L_permanentemaildir}</th>
-          <th>{opt_mail2_data}</th>
+          <th>
+            <!-- IF ! opt_mail2_data -->
+            <input name="db_email2" maxlength="64" size="20" value="{opt_mail2_data}" type="text"><br />
+            {L_opt_mail_permanent_description}
+            <!-- ELSE -->
+            {opt_mail2_data}
+            <!-- ENDIF -->
+          </th>
         </tr>
         <tr>
           <th>{L_opt_birthday}</th>
@@ -239,7 +249,7 @@
       <table>
         <!-- IF .options_1 -->
         <tr>
-          <th class="c_c" colspan="2">{L_opt_alerts}</th>
+          <th class="c_c" colspan="<!-- IF SERVER_SEND_EMAIL -->3<!-- ELSE -->2<!-- ENDIF -->">{L_opt_alerts}</th>
         </tr>
         <!-- BEGIN options_1 -->
         <tr>
