--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -102,3 +102,5 @@
     {ADV_SEO_JAVASCRIPT}
     <!-- ENDIF -->
     <table class="markup" width="100%" id="global_page_markup">
+      <tr>
+        <td valign="top" align="center"><div style="margin: 0 auto">
