--- a/design/templates/OpenGame/ali_members.tpl.html
+++ b/design/templates/OpenGame/ali_members.tpl.html
@@ -51,6 +51,6 @@
   <!-- END member -->
 
   <tr>
-    <td class="c right" colspan="{$COLSPAN}"><a href="alliance.php">{L_ali_sys_main_page}</a></td>
+    <th class="c_c link" colspan="{$COLSPAN}"><a href="alliance.php">{L_ali_sys_main_page}</a></th>
   </tr>
 </table>
