--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -1,6 +1,5 @@
 <!-- IF .menu -->
-<tr><td id="sn_menu" valign="top" rowspan="3">
-  <table cellspacing="0" cellpadding="0" id="left_menu" align="left">
+  <table cellspacing="0" cellpadding="0" id="left_menu" align="left" style="margin-right: 10px" class="c_l">
   <!-- BEGIN menu -->
     <tr><!-- IF menu.LEVEL == 'header' --><!-- DEFINE $TX = 'th' --><!-- ELSE --><!-- DEFINE $TX = 'td' --><!-- ENDIF -->
       <{$TX}
@@ -37,8 +36,8 @@
   <!-- END menu -->
   </table>
 </td>
-  <td rowspan="3">&nbsp;</td>
-</tr>
+<td>&nbsp;</td>
+<td width="100%" valign="top" align="center"><div style="margin: 0 auto">
 
 <script type="text/javascript"><!--
 sn_timers.unshift({'id': 'menu_admin_server_time', 'type': 2, 'active': true, 'start_time': {TIME_NOW}, options: 3});
