--- a/design/templates/OpenGame/planet_list.tpl.html
+++ b/design/templates/OpenGame/planet_list.tpl.html
@@ -68,7 +68,7 @@
           <!-- IF planet.PLANET_GOVERNOR_ID && planet.PLANET_GOVERNOR_LEVEL -->
             <span class="icon_alpha icon_25per_left_4" title="{planet.PLANET_GOVERNOR_NAME} {planet.PLANET_GOVERNOR_LEVEL}" go_overview="{planet.ID}" mode="manage">
               <img src="{dpath}gebaeude/{planet.PLANET_GOVERNOR_ID}.jpg" class="icon_fill">
-              <span class="icon_alpha planet_list_governor_level">{planet.PLANET_GOVERNOR_LEVEL}</span>
+              <span class="icon_alpha left_bottom">{planet.PLANET_GOVERNOR_LEVEL}</span>
             </span>
           <!-- ENDIF -->
 
