--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -1,6 +1,6 @@
 <!-- NAVBAR START -->
 
-<tr><td class="c_c" valign="top"><div id="sn_navbar" class="c_c" style="margin:0 auto">
+<!-- <tr><td class="c_c" valign="top"><div id="sn_navbar" class="c_c" style="margin:0 auto"> -->
   <table cellpadding="3" cellspacing="0" class="header c_c" id="resources"><tbody>
     <tr>
       <td class="c_l noborder">
@@ -184,7 +184,7 @@
     </tr>
   </table>
   <!-- ENDIF -->
-</div></td></tr>
+<!-- </div></td></tr> -->
 
 <script type="text/javascript"><!--
   function changePlanet(obj)
