--- a/design/css/global.css
+++ b/design/css/global.css
@@ -36,9 +36,6 @@ html, body, form, iframe
 }
 
 
-
-
-
 input.button
 {
   padding-left: 4px;
@@ -80,16 +77,6 @@ li
   float: right;
 }
 
-.left /* Left align */
-{
-  text-align: left;
-}
-
-.right /* Right align */
-{
-  text-align: right;
-}
-
 .hide  /* Hide */
 {
   display: none;
@@ -115,13 +102,13 @@ li
 /* Icon file */
 .icons { background-image: url(../images/icons.png); }
 
-.icon-plus { background-position: 0 0px; }
-.icon-minus { background-position: -16px 0px; }
-.icon-info { background-position: -32px 0px; }
-.icon-cancel { background-position: -48px 0px; }
-.icon-gather { background-position: -64px 0px; }
+.icon-plus { background-position: 0 0; }
+.icon-minus { background-position: -16px 0; }
+.icon-info { background-position: -32px 0; }
+.icon-cancel { background-position: -48px 0; }
+.icon-gather { background-position: -64px 0; }
 
-.icon_alpha, .alpha75 /* Partially transparent background for over-planet-image icons */
+.icon_alpha, .alpha75, .a75 /* Partially transparent background for over-planet-image icons */
 {
   /* Fallback for web browsers that doesn't support RGBa */
   background: rgb(0, 0, 0);
@@ -176,15 +163,17 @@ table {margin-left: auto; margin-right: auto}
 
 .noborder, .noborder tr, .noborder th
 {
-  border: 0px;
+  border: 0;
 }
 
 .markup, .markup > tbody > tr, .markup > tbody > tr > th, .markup > tbody > tr > td
 {
-  border: 0px;
   background: transparent;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  /* border-spacing: 0;*/
+  /* border-collapse: collapse;*/
 }
 
 #chat_box
@@ -291,8 +280,8 @@ table {margin-left: auto; margin-right: auto}
 .element_fill_wrap
 {
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%
 }
@@ -315,16 +304,16 @@ table {margin-left: auto; margin-right: auto}
 .empire_cell_filler
 {
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   height: 100%;
 }
 
 .empire_cell
 {
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
   vertical-align: middle;
@@ -339,22 +328,22 @@ table {margin-left: auto; margin-right: auto}
 .planet_list_wrap
 {
   position: relative;
-  border: 0px solid blue;
+  border: 0 solid blue;
 }
 
 .planet_list_bar
 {
   position: absolute;
-  bottom: 0px;
-  left: 0px;
+  bottom: 0;
+  left: 0;
   width: 100%;
 }
 
 .planet_list_fields
 {
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   height: 100%;
   width: 100%;
   font-size: 9px;
@@ -394,36 +383,55 @@ table {margin-left: auto; margin-right: auto}
 {
   height: 9px;
   overflow: hidden;
-  left: 0px;
+  left: 0;
   position: absolute;
 }
 
 .planet_list_res_bar
 {
   position: absolute;
-  top: 0px;
+  top: 0;
   overflow: hidden;
 }
 
-.planet_list_governor_level
+.left
 {
   position: absolute;
-  bottom: 0px;
-  left: 0px;
+  left: 0;
 }
-
+.right
+{
+  position: absolute;
+  right: 0;
+}
 .left_top
 {
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
+}
+.left_bottom
+{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.right_top {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.right_bottom {
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 .icon_25per_left_1
 {
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   width: 25%;
   height: 25%
 }
@@ -432,7 +440,7 @@ table {margin-left: auto; margin-right: auto}
 {
   position: absolute;
   top: 25%;
-  left: 0px;
+  left: 0;
   width: 25%;
   height: 25%
 }
@@ -441,7 +449,7 @@ table {margin-left: auto; margin-right: auto}
 {
   position: absolute;
   top: 50%;
-  left: 0px;
+  left: 0;
   width: 25%;
   height: 25%;
 }
@@ -450,7 +458,7 @@ table {margin-left: auto; margin-right: auto}
 {
   position: absolute;
   top: 75%;
-  left: 0px;
+  left: 0;
   width: 25%;
   height: 25%;
 }
@@ -465,7 +473,7 @@ table {margin-left: auto; margin-right: auto}
 .icon_25per_top_2
 {
   position: absolute;
-  top: 0px;
+  top: 0;
   left: 25%;
   width: 25%;
   height: 25%;
@@ -513,6 +521,7 @@ th.c_j, td.c_j
 {
   text-align: center;
 }
+
 .cell_justify, .c_j
 {
   text-align: justify;
@@ -550,7 +559,7 @@ th.c_j, td.c_j
 }
 
 #universe_main img {
-  border: 0px;
+  border: 0;
   cursor: pointer;
 }
 
@@ -570,7 +579,7 @@ th.c_j, td.c_j
 }
 
 .news_header {
-  background-color: #415680;
+  background-color: #233452;
 }
 
 .news_date {
