--- a/design/templates/OpenGame/ali_admin_rights.tpl.html
+++ b/design/templates/OpenGame/ali_admin_rights.tpl.html
@@ -1,9 +1,9 @@
 <br />
 <table width=519>
-  <tr><td class=c colspan=7>
+  <tr><th class="c_c" colspan="7">
     <span class="fl">{L_ali_adm_rights_title}</span>
-    <span class="fr"><a href="alliance.php?mode=admin">{L_ali_adm_return}</a></span>
-  </td></tr>
+    <span class="fr"><a class="link" href="alliance.php?mode=admin">{L_ali_adm_return}</a></span>
+  </th></tr>
 
   <form action="alliance.php?mode=admin&edit=rights" method=POST>
     <tr>
@@ -52,13 +52,13 @@
 
 <form action="alliance.php?mode=admin&edit=rights" method=POST>
 <table width=519>
-	<tr><td class=c colspan=2>{L_ali_adm_rights_legend}</td></tr>
-	<tr><th><img src="design/images/r8.png"></th><th class="c left">{L_ali_adm_rights_mass_mail}</th></tr>
-	<tr><th><img src="design/images/r7.png"></th><th class="c left">{L_ali_adm_rights_view_online}</th></tr>
-	<tr><th><img src="design/images/r5.png"></th><th class="c left">{L_ali_req_check}</th></tr>
-	<tr><th><img src="design/images/r2.png"></th><th class="c left">{L_ali_adm_kick}</th></tr>
-	<tr><th><img src="design/images/r9.png"></th><th class="c left">{L_ali_adm_rights_helper}</th></tr>
-	<tr><td class="c right" colspan="2"><a href="alliance.php">{L_ali_sys_main_page}</a></td></tr>
+	<tr><th class="c_c" colspan="2">{L_ali_adm_rights_legend}</th></tr>
+	<tr><th><img src="design/images/r8.png"></th><td class="c_l">{L_ali_adm_rights_mass_mail}</td></tr>
+	<tr><th><img src="design/images/r7.png"></th><td class="c_l">{L_ali_adm_rights_view_online}</td></tr>
+	<tr><th><img src="design/images/r5.png"></th><td class="c_l">{L_ali_req_check}</td></tr>
+	<tr><th><img src="design/images/r2.png"></th><td class="c_l">{L_ali_adm_kick}</td></tr>
+	<tr><th><img src="design/images/r9.png"></th><td class="c_l">{L_ali_adm_rights_helper}</td></tr>
+	<tr><th class="c_c" colspan="2"><a class="link" href="alliance.php">{L_ali_sys_main_page}</a></th></tr>
 </table>
 </form>
 	
