--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -1,19 +1,19 @@
 /*
-                                 ÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛ
-                                 ÛÛÛ±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±ÛÛÛ±
-                                 ÛÛÛ±                                                  ÛÛÛ±
-                                 ÛÛÛ±                OGAME: EPIC BLUE                  ÛÛÛ±
-                                 ÛÛÛ±                                                  ÛÛÛ±
-                                 ÛÛÛ±                      V 1.0                       ÛÛÛ±
-                                 ÛÛÛ±                                                  ÛÛÛ±
-                                 ÛÛÛ±    Skin fuer "OGame" www.ogame.de V 1.2          ÛÛÛ±
-                                 ÛÛÛ±                                                  ÛÛÛ±
-                                 ÛÛÛ±                                                  ÛÛÛ±
-                                 ÛÛÛ±    Viel Spass                                    ÛÛÛ±
-                                 ÛÛÛ±                                                  ÛÛÛ±
-                                 ÛÛÛ±                    bei Problemen: etapred@gmx.de ÛÛÛ±
-                                 ÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛÛ±
-                                  ±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±±
+                                 Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«
+                                 Ð«Ð«Ð«Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±                                                  Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±                OGAME: EPIC BLUE                  Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±                                                  Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±                      V 1.0                       Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±                                                  Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±    Skin fuer "OGame" www.ogame.de V 1.2          Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±                                                  Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±                                                  Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±    Viel Spass                                    Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±                                                  Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Â±                    bei Problemen: etapred@gmx.de Ð«Ð«Ð«Â±
+                                 Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Ð«Â±
+                                  Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±Â±
 */
 
 body, form, table, input, select
@@ -71,7 +71,7 @@ td.error_message
   background-color     : #40557E;
 }
 
-td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l th, tr.c_r th, tr.c_c th, tr.c_j th
+td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l > th, tr.c_r > th, tr.c_c > th, tr.c_j > th
 {
   font-weight          : bold;
   background-image     : url("images/table_th_background.png");
@@ -318,7 +318,7 @@ h1
 div .ui-dialog-content table { background: #344055; }
 
 /* Icon file */
-.icons { background-image: url(images/icons.png); }
+.icons { background-image: url(images/icons.png) !important; }
 
 /* Que item */
 .que_item
