INT-feat-39a9.2: Planet and Empire overview pages output reduced. Also added medium-res background and support for medium-res screens. Also now loading small pictures of planets when they have low dimensions

--- a/design/templates/OpenGame/artifacts.tpl.html
+++ b/design/templates/OpenGame/artifacts.tpl.html
@@ -24,7 +24,7 @@
   </tr>
 
   <!-- BEGIN artifact -->
-    <tr>
+    <tr id="{artifact.ID}">
       <th width=120>
         <a href="infos.php?gid={artifact.ID}" class="link">{artifact.NAME}</a><br>
         <img src="{dpath}gebaeude/{artifact.ID}.jpg" align="top" width="120" height="120" /><br>
