--- a/design/css/global.css
+++ b/design/css/global.css
@@ -108,6 +108,11 @@ li
 .icon-cancel { background-position: -48px 0; }
 .icon-gather { background-position: -64px 0; }
 
+.icon-info_empire {
+  background-position: -32px 0;
+  display: inline-block; vertical-align: middle;
+}
+
 .icon_alpha, .alpha75, .a75 /* Partially transparent background for over-planet-image icons */
 {
   /* Fallback for web browsers that doesn't support RGBa */
@@ -325,12 +330,73 @@ table {margin-left: auto; margin-right: auto}
   cursor: pointer;
 }
 
-.planet_list_wrap
+
+
+.planet_list_top87 {
+  width: 87px;
+}
+.planet_list_top87 > .planet_list_wrap
 {
-  position: relative;
-  border: 0 solid blue;
+  height: 75px;
+}
+.planet_list_top87 > .planet_list_wrap > .images {
+  height: 100%;
+  width: 75px;
 }
 
+.planet_list_top112 {
+  width: 112px;
+}
+.planet_list_top112 > .planet_list_wrap
+{
+  height: 100px;
+}
+.planet_list_top112 > .planet_list_wrap > .images {
+  height: 100%;
+  width: 100px;
+}
+
+
+.planet_list_wrap {
+  position: relative;
+  border: 0 solid blue;
+  width: inherit;
+}
+.planet_list_wrap > .res_bar
+{
+  position: absolute;
+  top: 0;
+
+  overflow: hidden;
+
+  width: 4px;
+  height: 100%;
+}
+
+
+
+
+.planet_list_fields
+{
+  position: relative;
+
+  width: 100%;
+  height: 10px;
+
+  overflow: hidden;
+}
+.planet_list_fields > .numbers
+{
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  width: 100%;
+  height: 100%;
+
+  font-size: 9px;
+  font-weight: bold;
+}
 .planet_list_bar
 {
   position: absolute;
@@ -339,16 +405,11 @@ table {margin-left: auto; margin-right: auto}
   width: 100%;
 }
 
-.planet_list_fields
-{
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  font-size: 9px;
-  font-weight: bold;
+.ov_struc_timer{
+  white-space: normal;
 }
+
+
 
 .planet_list_moon_attack
 {
@@ -365,9 +426,15 @@ table {margin-left: auto; margin-right: auto}
   position: absolute;
   left: 0;
   width: 100%;
-  top: 90%;
+  top: 100%;
   height: 10%;
   overflow: hidden;
+}
+
+.planet_list_submoon_filler {
+  position: relative;
+  left: 0;
+  height: 100%;
 }
 
 .planet_list_submoon_attack
@@ -379,20 +446,7 @@ table {margin-left: auto; margin-right: auto}
   height: 48%;
 }
 
-.planet_list_fill_bar
-{
-  height: 9px;
-  overflow: hidden;
-  left: 0;
-  position: absolute;
-}
 
-.planet_list_res_bar
-{
-  position: absolute;
-  top: 0;
-  overflow: hidden;
-}
 
 .left
 {
@@ -403,6 +457,11 @@ table {margin-left: auto; margin-right: auto}
 {
   position: absolute;
   right: 0;
+}
+.bottom
+{
+  position: absolute;
+  bottom: 0;
 }
 .left_top
 {
@@ -485,6 +544,15 @@ table {margin-left: auto; margin-right: auto}
   width: 100%;
   border-style: none;
   cursor: pointer;
+}
+
+.fill_parent {
+  height: 100%;
+  width: 100%;
+}
+
+.va_m {
+  vertical-align: middle;
 }
 
 #copyright #supernova_ws
@@ -603,4 +671,19 @@ th.c_j, td.c_j
   text-decoration: underline;
   font-weight: bold;
   cursor: pointer;
+}
+
+.percent33{
+  width: 33%;
+  height: 33%;
+}
+
+.percent66{
+  width: 66%;
+  height: 66%;
+}
+
+.percent100{
+  width: 100%;
+  height: 100%;
 }
