--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -71,14 +71,18 @@
 
 .unit_preview .restrict {
   position: absolute;
-  left: 0px;
-  top: 88px;
+  left: 0;
+  bottom: 18px;
   width: 100%;
-  height: 20%;
+  /*height: 20%;*/
 
   font-size: 90%;
   line-height: 90%;
 }
 
 .gather_resources {
+}
+
+.ov_planet_fill_bar{
+  position: relative; width: 100%; height: 15px; border: 1px solid rgb(153, 153, 255);
 }
