--- a/design/templates/OpenGame/planet_list.tpl.html
+++ b/design/templates/OpenGame/planet_list.tpl.html
@@ -10,7 +10,7 @@
 
 <!-- BEGIN planet -->
   <!-- IF $OVERVIEW && (! LIST_COLUMN_COUNT || planet.S_ROW_COUNT % LIST_COLUMN_COUNT == 0)  -->
-   <tr>
+  <tr>
   <!-- ENDIF -->
   <td valign="top" class="{$CELL_CLASS} pointer" width="{$CELL_PLANET}" align="center">
   <!-- IF planet.ID -->
@@ -33,71 +33,67 @@
     <!-- ENDIF -->
 
     <!-- IF planet.MOON_ID == PLANET_ID -->
-      <!-- DEFINE $MOON_IMG_SIZE = '66%' -->
+      <!-- DEFINE $MOON_IMG_SIZE = '66' -->
     <!-- ELSE -->
-      <!-- DEFINE $MOON_IMG_SIZE = '32%' -->
+      <!-- DEFINE $MOON_IMG_SIZE = '33' -->
     <!-- ENDIF -->
 
-    <div style="width: {$FRAME_WIDTH}px;">
-    <!-- IF $OVERVIEW -->
-      <!-- IF planet.MOON_ID == PLANET_ID -->{L_sys_moon} {planet.MOON_NAME}<!-- ELSE -->{planet.NAME}<!-- ENDIF --><br />[{planet.GALAXY}:{planet.SYSTEM}:{planet.PLANET}]<br>
-    <!-- ENDIF -->
+    <div class="planet_list_top{$FRAME_WIDTH}">
+      <!-- IF $OVERVIEW -->
+      <div><!-- IF planet.MOON_ID == PLANET_ID -->{L_sys_moon} {planet.MOON_NAME}<!-- ELSE -->{planet.NAME}<!-- ENDIF --><br />[{planet.GALAXY}:{planet.SYSTEM}:{planet.PLANET}]</div>
+      <!-- ENDIF -->
 
-      <div class="planet_list_wrap" style="height: {$DEUTERIUM_BAR}px; width: {$FRAME_WIDTH}px;">
-        <div class="left_top" style="height: {$PLANET_IMG_SIZE}px; width: {$PLANET_IMG_SIZE}px;">
-          <span class="element_fill_wrap">
-            <!-- IF planet.IMAGE -->
-              <a href="overview.php?cp={planet.ID}"><img style="border-style: none;" src="{dpath}planeten/{planet.IMAGE}.jpg" height="100%" width="100%"></a>
-            <!-- ELSE -->
-              &nbsp;
-            <!-- ENDIF -->
-          </span>
+      <div class="planet_list_wrap">
+        <div class="left_top images" planet_id="{planet.ID}">
+          <!--style="height: {$PLANET_IMG_SIZE}px; width: {$PLANET_IMG_SIZE}px;"-->
+
+          <img src="{dpath}planeten/<!-- IF $PLANET_IMG_SIZE == 75 -->small/s_<!-- ENDIF -->{planet.IMAGE}.jpg" class="element_fill_wrap" go="" />
 
           <!-- IF .planet.building_que -->
-            <a href="buildings.php?cp={planet.ID}"><img src="{D_SN_ROOT_VIRTUAL}design/images/build_building.png" class="icon_alpha icon_25per_left_1"></a>
+          <img src="{D_SN_ROOT_VIRTUAL}design/images/build_building.png" class="a75 icon_25per_left_1" title="{planet.STRUCTURE}" go="build" />
           <!-- ENDIF -->
 
           <!-- IF planet.HANGAR -->
-            <a href="buildings.php?mode=fleet&cp={planet.ID}"><img src="{D_SN_ROOT_VIRTUAL}design/images/build_hangar.png" class="icon_alpha icon_25per_left_2" title="{planet.HANGAR}"></a>
+          <img src="{D_SN_ROOT_VIRTUAL}design/images/build_hangar.png" class="a75 icon_25per_left_2" title="{planet.HANGAR}" go="build" mode="fleet" />
           <!-- ENDIF -->
 
           <!-- IF planet.DEFENSE -->
-            <a href="buildings.php?mode=fleet&cp={planet.ID}"><img src="{D_SN_ROOT_VIRTUAL}design/images/build_defense.png" class="icon_alpha icon_25per_left_3" title="{planet.DEFENSE}"></a>
+          <img src="{D_SN_ROOT_VIRTUAL}design/images/build_defense.png" class="a75 icon_25per_left_3" title="{planet.DEFENSE}" go="build" mode="defense" />
           <!-- ENDIF -->
 
           <!-- IF planet.PLANET_GOVERNOR_ID && planet.PLANET_GOVERNOR_LEVEL -->
-            <span class="icon_alpha icon_25per_left_4" title="{planet.PLANET_GOVERNOR_NAME} {planet.PLANET_GOVERNOR_LEVEL}" go_overview="{planet.ID}" mode="manage">
-              <img src="{dpath}gebaeude/{planet.PLANET_GOVERNOR_ID}.jpg" class="icon_fill">
-              <span class="icon_alpha left_bottom">{planet.PLANET_GOVERNOR_LEVEL}</span>
-            </span>
+          <span class="a75 icon_25per_left_4" title="{planet.PLANET_GOVERNOR_NAME} {planet.PLANET_GOVERNOR_LEVEL}" go="" mode="manage">
+            <img src="{dpath}gebaeude/{planet.PLANET_GOVERNOR_ID}.jpg" class="icon_fill">
+            <span class="a75 left_bottom">{planet.PLANET_GOVERNOR_LEVEL}</span>
+          </span>
           <!-- ENDIF -->
 
-          <span title="{L_flt_gather_all}" class="icon_alpha icon_25per_right_4" go_fleet="{planet.ID}" mode="5">
+          <span title="{L_flt_gather_all}" class="a75 icon_25per_right_4" go="fleet" mode="5">
             <div class="icons icon-gather"></div>
           </span>
 
           <!-- IF planet.FLEET_OWN -->
-          <a href="flying_fleets.php?cp={planet.ID}"><img src="{D_SN_ROOT_VIRTUAL}design/images/icon_fleet_own.png" class="icon_alpha icon_25per_top_2" onmouseover="fleet_dialog_show(this, '{planet.PLANET_FLEET_ID}')"></a>
+          <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_fleet_own.png" class="a75 icon_25per_top_2" go="flying" onmouseover="fleet_dialog_show(this, '{planet.PLANET_FLEET_ID}')" />
           <!-- ENDIF -->
 
           <!-- IF planet.FLEET_ENEMY -->
-          <a href="overview.php?cp={planet.ID}"><img src="{D_SN_ROOT_VIRTUAL}design/images/icon_warning.png" class="planet_list_moon_attack"></a>
+          <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_warning.png" class="planet_list_moon_attack" go="" />
           <!-- ENDIF -->
 
           <!-- IF planet.MOON_ID -->
-            <div style="position: absolute; top: 0; right: 0; width: {$MOON_IMG_SIZE}; height: {$MOON_IMG_SIZE};">
-              <a href="overview.php?cp={planet.MOON_ID}" title="{planet.MOON_NAME} [{planet.GALAXY}:{planet.SYSTEM}:{planet.PLANET}]"><img src="{dpath}planeten/small/s_{planet.MOON_IMG}.jpg" class="icon_fill"></a>
+            <div class="right_top percent{$MOON_IMG_SIZE}" planet_id="{planet.MOON_ID}">
+              <img src="{dpath}planeten/small/s_{planet.MOON_IMG}.jpg" class="icon_fill" go="" title="{planet.MOON_NAME} [{planet.GALAXY}:{planet.SYSTEM}:{planet.PLANET}]" />
 
-              <span title="{L_flt_gather_all}" class="icon_alpha icon_25per_right_4">
-                <div class="icons icon-gather" go_fleet="{planet.MOON_ID}" mode="5"></div>
+              <span title="{L_flt_gather_all}" class="a75 icon_25per_right_4" go="fleet" mode="5">
+                <div class="icons icon-gather"></div>
               </span>
 
               <span class="planet_list_submoon_fields">
-                <div class="fl" style="position: relative; left: 0px; height: 100%; width: {planet.MOON_FILL}%; background-color: <!-- IF planet.MOON_FILL >= 100 -->red<!-- ELSEIF planet.MOON_FILL > 80 -->yellow<!-- ELSE -->green<!-- ENDIF -->;"></div>
+                <div class="fl planet_list_submoon_filler <!-- IF planet.MOON_FILL >= 100 -->negative<!-- ELSEIF planet.MOON_FILL > 80 -->neutral<!-- ELSE -->positive<!-- ENDIF -->_bg" style="width: {planet.MOON_FILL}%;"></div>
               </span>
 
               <!-- IF planet.MOON_ENEMY != 0 -->
-                <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_warning.png" class="planet_list_moon_attack" go_overview="{planet.MOON_ID}">
+              <img src="{D_SN_ROOT_VIRTUAL}design/images/icon_warning.png" class="planet_list_moon_attack" go="">
               <!-- ENDIF -->
             </div>
           <!-- ENDIF -->
@@ -112,7 +108,7 @@
         <!-- ELSE -->
           <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
         <!-- ENDIF -->
-        <div class="{$FIELD_COLOR} planet_list_res_bar" style="height: {$PLANET_IMG_SIZE}px; width: {$RESOURCE_BAR}px; left: {$METAL_BAR}px;">
+        <div class="{$FIELD_COLOR} res_bar" style="left: {$METAL_BAR}px;">
           <div class="planet_list_bar metal_bg" style="height: {planet.METAL_PERCENT}%"></div>
         </div>
         <!-- IF planet.CRYSTAL_PERCENT < 50 --> 
@@ -124,7 +120,7 @@
         <!-- ELSE -->
           <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
         <!-- ENDIF -->
-        <div class="{$FIELD_COLOR} planet_list_res_bar" style="height: {$PLANET_IMG_SIZE}px; width: {$RESOURCE_BAR}px; left: {$CRYSTAL_BAR}px;">
+        <div class="{$FIELD_COLOR} res_bar" style="left: {$CRYSTAL_BAR}px;">
           <div class="planet_list_bar crystal_bg" style="height: {planet.CRYSTAL_PERCENT}%"></div>
         </div>
         <!-- IF planet.DEUTERIUM_PERCENT < 50 -->
@@ -136,7 +132,7 @@
         <!-- ELSE -->
           <!-- DEFINE $FIELD_COLOR = 'positive_bg' -->
         <!-- ENDIF -->
-        <div class="{$FIELD_COLOR} planet_list_res_bar" style="height: {$PLANET_IMG_SIZE}px; width: {$RESOURCE_BAR}px; left: {$DEUTERIUM_BAR}px;">
+        <div class="{$FIELD_COLOR} res_bar" style="left: {$DEUTERIUM_BAR}px;">
           <div class="planet_list_bar deuterium_bg" style="height: {planet.DEUTERIUM_PERCENT}%"></div>
         </div>
 
@@ -149,22 +145,24 @@
         <!-- ELSE -->
           <!-- DEFINE $FIELD_COLOR = 'negative_bg' -->
         <!-- ENDIF -->
-        <div class="planet_list_fill_bar" style="width: {$PLANET_IMG_SIZE}px; top: {$PLANET_IMG_SIZE}px;">
-          <div style="width: {planet.FILL}%;" class="{$FIELD_COLOR} empire_cell_filler"></div>
-          <div class="planet_list_fields">{planet.FIELDS_CUR}&nbsp;/&nbsp;{planet.FIELDS_MAX}</div>
-        </div>
       </div>
 
-    <!-- IF .planet.building_que -->
-      <div style="width: 75; white-space: normal;" id="ov_building{planet.ID}"></div>
-      <div id="ov_building{planet.ID}_timer" style="color: darkgrey;"></div>
 
-      <script type='text/javascript'>
-        sn_timers.unshift({id: 'ov_building{planet.ID}', type: 0, active: true, start_time: {TIME_NOW}, options: { msg_done: '{L_sys_no_task}', que: [
-          <!-- BEGIN building_que -->['{building_que.ID}', '{building_que.NAME} ({building_que.LEVEL})', {building_que.TIME}, '{building_que.AMOUNT}'],<!-- END building_que -->
-        ]}});
-      </script>
-    <!-- ELSE -->{L_sys_no_task}<!-- ENDIF -->
+      <div class="planet_list_fields">
+        <div style="width: {planet.FILL}%;" class="{$FIELD_COLOR} empire_cell_filler"></div>
+        <div class="numbers">{planet.FIELDS_CUR}&nbsp;/&nbsp;{planet.FIELDS_MAX}</div>
+      </div>
+
+      <div class="ov_struc_timer" id="ov_building{planet.ID}">{L_sys_no_task}</div>
+      <!-- IF .planet.building_que -->
+        <div id="ov_building{planet.ID}_timer" style="color: darkgrey;"></div>
+
+        <script type='text/javascript'>
+          sn_timers.unshift({id: 'ov_building{planet.ID}', type: 0, active: true, start_time: {TIME_NOW}, options: { msg_done: '{L_sys_no_task}', que: [
+            <!-- BEGIN building_que -->['{building_que.ID}', '{building_que.NAME} ({building_que.LEVEL})', {building_que.TIME}, '{building_que.AMOUNT}'],<!-- END building_que -->
+          ]}});
+        </script>
+      <!-- ENDIF -->
     </div>
 
     <!-- IF $OVERVIEW -->
