--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -41,13 +41,13 @@
 
       <table width="522">
         <tr>
-          <th style="white-space: nowrap;" class="c_c" colspan=5>
-            <div class="fl">
-              <a href="galaxy.php?mode=0&galaxy={PLANET_GALAXY}&system={PLANET_SYSTEM}">[{PLANET_GALAXY}:{PLANET_SYSTEM}:{PLANET_PLANET}] {PLANET_TYPE_TEXT} "{PLANET_NAME}"</a>
-            </div>
-            <div class="fr">
-              <a href="overview.php?mode=manage"><font color="green">[ {L_ov_manage} ]</font></a>
-            </div>
+          <th class="c_l" colspan=3>
+            <a href="galaxy.php?mode=0&galaxy={PLANET_GALAXY}&system={PLANET_SYSTEM}" class="link">[{PLANET_GALAXY}:{PLANET_SYSTEM}:{PLANET_PLANET}] {PLANET_TYPE_TEXT} "{PLANET_NAME}"</a>
+          </th>
+          <th class="c_r " colspan=2>
+            <span class="positive link" go="" mode="manage">
+              [ {L_ov_manage} ]
+            </span>
           </th>
         </tr>
 
@@ -86,22 +86,21 @@
           </td>
 
           <th width=100 align="center">{L_buildings_on_planet}</th>
-          <th colspan="3" style="position: relative; padding: 0px; height: 100%;">
-            <div style="position: relative; width: 100%; height: 100%; border: 1px solid rgb(153, 153, 255); ">
+          <th colspan="3" style="padding: 0 2px;">
+            <div class="ov_planet_fill_bar">
               <!-- IF PLANET_FILL >= 100 -->
-                <!-- DEFINE $BAR_COLOR = '#C00000' -->
+                <!-- DEFINE $BAR_COLOR = 'negative_bg' -->
               <!-- ELSEIF PLANET_FILL >= 80 -->
-                <!-- DEFINE $BAR_COLOR = '#C0C000' -->
+                <!-- DEFINE $BAR_COLOR = 'neutral_bg' -->
               <!-- ELSE -->
-                <!-- DEFINE $BAR_COLOR = '#00C000' -->
+                <!-- DEFINE $BAR_COLOR = 'positive_bg' -->
               <!-- ENDIF -->
-              <div style="position: absolute; top: 0px; left: 0px; width: {PLANET_FILL_BAR}%; background-color: {$BAR_COLOR}; height:100%;">&nbsp;</div>
-              <div style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; vertical-align: middle;">{planet_field_current}/{planet_field_max} ({PLANET_FILL}%)</div>
-              &nbsp;
+              <div class="left_top {$BAR_COLOR}" style="height:100%; width: {PLANET_FILL_BAR}%;">&nbsp;</div>
+              <div class="left_top fill_parent va_m">{planet_field_current}/{planet_field_max} ({PLANET_FILL}%)</div>
             </div>
             <!-- IF PLANET_TYPE == 1 -->
               <!-- IF SECTOR_CAN_BUY -->
-                <a href="overview.php?sector_buy=1"><span class="positive">{L_sys_sector_buy} {L_sys_for} {SECTOR_COST_TEXT} {L_sys_dark_matter_sh}</span></a>
+                <a href="overview.php?sector_buy=1" class="positive link">{L_sys_sector_buy} {L_sys_for} {SECTOR_COST_TEXT} {L_sys_dark_matter_sh}</a>
               <!-- ELSE -->
                 <span class="negative">{L_sys_sector_buy} {L_sys_for} {SECTOR_COST_TEXT} {L_sys_dark_matter_sh}</span>
               <!-- ENDIF -->
@@ -127,7 +126,7 @@
         <tr>
           <th colspan="2">
             {L_sys_planet_density_core}: {planet_density_text}
-            <div class="icons icon-info link" style="display: inline-block; vertical-align: middle;" onclick="document.location='infos.php?gid={D_UNIT_PLANET_DENSITY}'"></div>
+            <div class="icons link icon-info_empire" go="info" unit_id="{D_UNIT_PLANET_DENSITY}"></div>
           </th>
           <th colspan="2">
             {L_sys_planet_density}:&nbsp;{planet_density}&nbsp;{L_sys_planet_density_units}
